--- a/pepeizqs deals web/Pages/Componentes/Cuenta/Claves.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/Claves.razor
@@ -6,14 +6,23 @@
 @inject UserManager<Usuario> UserManager
 @inject IHttpContextAccessor HttpContextAccessor
 
-<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px;">
+<style>
+	.caja-diseño {
+		background: linear-gradient(180deg, var(--fondoOscuro) 0%, var(--fondoMinimo) 211.07%);
+		border: 2px solid var(--fondoOscuro);
+		box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.28),0px 0px 2px 0px rgba(0, 0, 0, 0.24);
+		border-radius: 5px;
+	}
+</style>
+
+<div class="caja-diseño" style="padding: 40px;">
 	@if (usuario.EmailConfirmed == true)
 	{
 		bool enseñarMensaje = true;
 
 		if (string.IsNullOrEmpty(usuario.Keys) == false)
 		{
-			List<BaseDatos.Usuarios.Clave>? claves = JsonSerializer.Deserialize<List<BaseDatos.Usuarios.Clave>>(usuario.Keys);
+			List<BaseDatos.Usuarios.Clave>? claves = Newtonsoft.Json.JsonConvert.DeserializeObject<List<BaseDatos.Usuarios.Clave>>(usuario.Keys);
 
 			if (claves != null)
 			{
