--- a/pepeizqs deals web/Pages/Componentes/Cuenta/Correo.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/Correo.razor
@@ -8,9 +8,18 @@
 @inject UserManager<Usuario> UserManager
 @inject IHttpContextAccessor HttpContextAccessor
 
+<style>
+    .caja-diseño {
+        background: linear-gradient(180deg, var(--fondoOscuro) 0%, var(--fondoMinimo) 211.07%);
+        border: 2px solid var(--fondoOscuro);
+        box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.28),0px 0px 2px 0px rgba(0, 0, 0, 0.24);
+        border-radius: 5px;
+    }
+</style>
+
 @if (usuario != null)
 {
-    <div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px;">
+    <div class="caja-diseño" style="padding: 40px;">
         @if (correoConfirmado == true)
         {
             <div class="input-group" style="margin-bottom: 25px;">
@@ -43,16 +52,14 @@
             <input @onchange="@(e => CambiarNuevoCorreo(e))" value="@correoNuevo" class="entrada-texto" autocomplete="email" aria-required="true" placeholder="@Herramientas.Idiomas.BuscarTexto(idioma, "Mail2", "Account")" />
         </div>
 
-        <div style="display: flex; flex-direction: column;">
-            <div class="perfil-flexible-izquierda">
-                <button @onclick="ClickearCambioCorreo" class="boton" style="font-size: 18px;">
-                    @Herramientas.Idiomas.BuscarTexto(idioma, "Mail5", "Account")
-                </button>  
-            </div>
+        <div style="display: flex; flex-direction: column; gap: 20px;">
+            <button @onclick="ClickearCambioCorreo" class="boton-pequeño" style="font-size: 18px; width: fit-content; padding: 12px 20px;">
+                @Herramientas.Idiomas.BuscarTexto(idioma, "Mail5", "Account")
+            </button> 
 
             @if (correoCambioEnviado == true)
             {
-                <div class="alert alert-success alert-dismissible" style="margin-bottom: 0px; margin-top: 20px;" role="alert">
+                <div class="alert alert-success alert-dismissible" style="margin-bottom: 0px;" role="alert">
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                     @Herramientas.Idiomas.BuscarTexto(idioma, "Mail7", "Account")
                 </div>
