--- a/pepeizqs deals web/wwwroot/css/resto.css
+++ b/pepeizqs deals web/wwwroot/css/resto.css
@@ -91,7 +91,7 @@
 
 .boton-peligro {
     color: var(--colorTexto);
-    background-color: var(--colorTextoPeligro);
+    background-color: var(--fondoPeligro);
     display: inline-block;
     user-select: none;
     width: 100%;
