--- a/pepeizqs deals web/Pages/Componentes/Cuenta/Foro.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/Foro.razor
@@ -5,10 +5,19 @@
 @inject UserManager<Usuario> UserManager
 @inject IHttpContextAccessor HttpContextAccessor
 
+<style>
+    .caja-diseño {
+        background: linear-gradient(180deg, var(--fondoOscuro) 0%, var(--fondoMinimo) 211.07%);
+        border: 2px solid var(--fondoOscuro);
+        box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.28),0px 0px 2px 0px rgba(0, 0, 0, 0.24);
+        border-radius: 5px;
+    }
+</style>
+
 @if (usuario != null)
 {
-    <div style="display: flex; flex-direction: column; gap: 20px;">
-        <div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+    <div style="display: flex; flex-direction: column; gap: 30px;">
+        <div class="caja-diseño" style="padding: 30px;">
             
             @if (puedeCambiarNombre == true)
             {
@@ -31,7 +40,7 @@
             <img src="@avatar" alt="Avatar" style="width: 60px; height: 60px; margin-top: 10px; margin-left: 10px;" />
 
             <div style="margin-top: 30px;">
-                <button @onclick="ClickActualizar" class="boton" style="font-size: 18px; width: fit-content; padding: 10px 20px;">
+                <button @onclick="ClickActualizar" class="boton-pequeño" style="font-size: 18px; width: fit-content; padding: 10px 20px;">
                     @Herramientas.Idiomas.BuscarTexto(idioma, "String3", "AccountForum")
                 </button>
             </div>
@@ -44,7 +53,7 @@
             }
         </div>
 
-        <div style="display: flex; align-items: center; background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+        <div class="caja-diseño" style="display: flex; align-items: center; padding: 30px;">
             <div class="checkbox-caja">
                 <input type="checkbox" class="checkbox-interior" checked="@estadoPortada" @onchange="ClickearCambioPortada">
             </div>
