--- a/pepeizqs deals web/Pages/Componentes/Cuenta/Idioma.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/Idioma.razor
@@ -5,11 +5,20 @@
 @inject UserManager<Usuario> UserManager
 @inject IHttpContextAccessor HttpContextAccessor
 
+<style>
+    .caja-diseño {
+        background: linear-gradient(180deg, var(--fondoOscuro) 0%, var(--fondoMinimo) 211.07%);
+        border: 2px solid var(--fondoOscuro);
+        box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.28),0px 0px 2px 0px rgba(0, 0, 0, 0.24);
+        border-radius: 5px;
+    }
+</style>
+
 @if (usuario != null)
 {
-    <div style="display: flex; flex-direction: column; gap: 20px;">
-        <div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px; display: flex; flex-direction: column; gap: 10px;">
-            <div style="margin-bottom: 5px;">
+    <div style="display: flex; flex-direction: column; gap: 40px;">
+        <div class="caja-diseño" style="padding: 40px; display: flex; flex-direction: column; gap: 10px;">
+            <div style="font-size: 18px; margin-bottom: 5px;">
                 @Herramientas.Idiomas.BuscarTexto(idioma, "String7", "AccountLanguage")
             </div>
 
@@ -95,8 +104,8 @@
             }
         </div>
 
-        <div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px; display: flex; flex-direction: column; gap: 15px;">
-            <div>
+        <div class="caja-diseño" style="padding: 40px; display: flex; flex-direction: column; gap: 15px;">
+            <div style="font-size: 18px;">
                 @Herramientas.Idiomas.BuscarTexto(idioma, "String8", "AccountLanguage")
             </div>
 
