--- a/pepeizqs deals web/Pages/Componentes/Cuenta/Juegos/Steam.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/Juegos/Steam.razor
@@ -8,15 +8,24 @@
 @inject IHttpContextAccessor HttpContextAccessor
 
 <style>
+	.caja-diseño {
+		background: linear-gradient(180deg, var(--fondoOscuro) 0%, var(--fondoMinimo) 211.07%);
+		border: 2px solid var(--fondoOscuro);
+		box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.28),0px 0px 2px 0px rgba(0, 0, 0, 0.24);
+		border-radius: 5px;
+	}
+</style>
+
+<style>
 	.cargando {
-	width: 48px;
-	height: 48px;
-	border: 5px solid var(--colorTexto);
-	border-bottom-color: transparent;
-	border-radius: 50%;
-	display: inline-block;
-	box-sizing: border-box;
-	animation: rotation 1s linear infinite;
+		width: 48px;
+		height: 48px;
+		border: 5px solid var(--colorTexto);
+		border-bottom-color: transparent;
+		border-radius: 50%;
+		display: inline-block;
+		box-sizing: border-box;
+		animation: rotation 1s linear infinite;
 	}
 
 	@@keyframes rotation {
@@ -32,7 +41,7 @@
 @if (usuario != null)
 {
 	<div style="display: flex; flex-direction: column; gap: 20px;">
-		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+		<div class="caja-diseño" style="padding: 30px;">
 			<div style="display: flex; align-items: center; gap: 20px; text-align: left;">
 				<img src="@JuegoDRM2.SacarImagen(JuegoDRM.Steam)" style="max-width: 40px; max-height: 40px;" />
 
@@ -83,12 +92,12 @@
 			</div>
 		</div>
 
-		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+		<div class="caja-diseño" style="padding: 30px;">
 			<div style="font-size: 18px;">
 				@Herramientas.Idiomas.BuscarTexto(idioma, "String16", "AccountGames")
 			</div>
 
-			<div style="display: flex; flex-direction: column; gap: 20px; margin-top: 20px; padding: 20px; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño);">
+			<div style="display: flex; flex-direction: column; gap: 20px; margin-top: 20px; padding: 20px; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); border-radius: 5px;">
 				<label>@string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String2", "AccountGames"), "Steam")</label>
 
 				<button @onclick="ClickearEnseñarImagen" style="outline: none; border: 0; background-color: transparent; color: var(--colorTextoOscuro); padding: 0px; text-align: left;">
@@ -127,7 +136,7 @@
 				{
 					if (ocupado == false)
 					{
-						<button class="boton" style="font-size: 18px; padding: 10px 30px; width: fit-content;" @onclick="@(e => ActualizarCuenta(e))">
+						<button class="boton-pequeño" style="font-size: 18px; padding: 10px 30px; width: fit-content;" @onclick="@(e => ActualizarCuenta(e))">
 							@Herramientas.Idiomas.BuscarTexto(idioma, "String5", "AccountGames")
 						</button>
 					}
