--- a/pepeizqs deals web/Pages/Componentes/Cuenta/NotificacionesCorreo.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/NotificacionesCorreo.razor
@@ -5,8 +5,17 @@
 @inject UserManager<Usuario> UserManager
 @inject IHttpContextAccessor HttpContextAccessor
 
+<style>
+	.caja-diseño {
+		background: linear-gradient(180deg, var(--fondoOscuro) 0%, var(--fondoMinimo) 211.07%);
+		border: 2px solid var(--fondoOscuro);
+		box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.28),0px 0px 2px 0px rgba(0, 0, 0, 0.24);
+		border-radius: 5px;
+	}
+</style>
+
 <div style="display: flex; flex-direction: column; gap: 20px;">
-	<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+	<div class="caja-diseño" style="padding: 30px;">
 		<div style="display: flex; align-items: start; gap: 30px;">
 			<div class="checkbox-caja">
 				<input type="checkbox" class="checkbox-interior" checked="@estadoMinimos" @onchange="ClickearCambioMinimos" style="margin-top: 20px;">
@@ -30,7 +39,7 @@
 		</div>
 	</div>
 
-	<div style="display: flex; align-items: center; background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+	<div class="caja-diseño" style="display: flex; align-items: center; padding: 30px;">
 		<div class="checkbox-caja">
 			<input type="checkbox" class="checkbox-interior" checked="@estadoBundles" @onchange="ClickearCambioBundles">
 		</div>
@@ -46,7 +55,7 @@
 		</div>
 	</div>
 
-	<div style="display: flex; align-items: center; background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+	<div class="caja-diseño" style="display: flex; align-items: center; padding: 30px;">
 		<div class="checkbox-caja">
 			<input type="checkbox" class="checkbox-interior" checked="@estadoGratis" @onchange="ClickearCambioGratis">
 		</div>
@@ -62,7 +71,7 @@
 		</div>
 	</div>
 
-	<div style="display: flex; align-items: center; background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+	<div class="caja-diseño" style="display: flex; align-items: center; padding: 30px;">
 		<div class="checkbox-caja">
 			<input type="checkbox" class="checkbox-interior" checked="@estadoSuscripciones" @onchange="ClickearCambioSuscripciones">
 		</div>
@@ -78,7 +87,7 @@
 		</div>
 	</div>
 
-	<div style="display: flex; align-items: center; background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+	<div class="caja-diseño" style="display: flex; align-items: center; padding: 30px;">
 		<div class="checkbox-caja">
 			<input type="checkbox" class="checkbox-interior" checked="@estadoOtros" @onchange="ClickearCambioOtros">
 		</div>
