--- a/pepeizqs deals web/Pages/Componentes/Cuenta/NotificacionesPush.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/NotificacionesPush.razor
@@ -7,8 +7,17 @@
 @inject IHttpContextAccessor HttpContextAccessor
 @inject IJSRuntime JavaScript
 
+<style>
+	.caja-diseño {
+		background: linear-gradient(180deg, var(--fondoOscuro) 0%, var(--fondoMinimo) 211.07%);
+		border: 2px solid var(--fondoOscuro);
+		box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.28),0px 0px 2px 0px rgba(0, 0, 0, 0.24);
+		border-radius: 5px;
+	}
+</style>
+
 <div style="display: flex; flex-direction: column; gap: 20px;">
-	<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+	<div class="caja-diseño" style="padding: 30px;">
 		<div style="display: flex; flex-direction: column; gap: 15px;">
 			@if (string.IsNullOrEmpty(userAgentRegistrado) == false)
 			{
@@ -37,7 +46,7 @@
 
 	@if (string.IsNullOrEmpty(userAgentRegistrado) == false)
 	{
-		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+		<div class="caja-diseño" style="padding: 30px;">
 			<div style="display: flex; align-items: start; gap: 30px;">
 				<div class="checkbox-caja">
 					<input type="checkbox" class="checkbox-interior" checked="@estadoMinimos" @onchange="ClickearCambioMinimos" style="margin-top: 20px;">
@@ -61,7 +70,7 @@
 			</div>
 		</div>
 
-		<div style="display: flex; align-items: center; background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+		<div class="caja-diseño" style="display: flex; align-items: center; padding: 30px;">
 			<div class="checkbox-caja">
 				<input type="checkbox" class="checkbox-interior" checked="@estadoBundles" @onchange="ClickearCambioBundles">
 			</div>
@@ -77,7 +86,7 @@
 			</div>
 		</div>
 
-		<div style="display: flex; align-items: center; background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+		<div class="caja-diseño" style="display: flex; align-items: center; padding: 30px;">
 			<div class="checkbox-caja">
 				<input type="checkbox" class="checkbox-interior" checked="@estadoGratis" @onchange="ClickearCambioGratis">
 			</div>
@@ -93,7 +102,7 @@
 			</div>
 		</div>
 
-		<div style="display: flex; align-items: center; background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+		<div class="caja-diseño" style="display: flex; align-items: center; padding: 30px;">
 			<div class="checkbox-caja">
 				<input type="checkbox" class="checkbox-interior" checked="@estadoSuscripciones" @onchange="ClickearCambioSuscripciones">
 			</div>
@@ -109,7 +118,7 @@
 			</div>
 		</div>
 
-		<div style="display: flex; align-items: center; background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+		<div class="caja-diseño" style="display: flex; align-items: center; padding: 30px;">
 			<div class="checkbox-caja">
 				<input type="checkbox" class="checkbox-interior" checked="@estadoOtros" @onchange="ClickearCambioOtros">
 			</div>
