--- a/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
@@ -50,27 +50,36 @@
 </script>
 
 <style>
+    .caja-diseño {
+        background: linear-gradient(180deg, var(--fondoOscuro) 0%, var(--fondoMinimo) 211.07%);
+        border: 2px solid var(--fondoOscuro);
+        box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.28),0px 0px 2px 0px rgba(0, 0, 0, 0.24);
+        border-radius: 5px;
+    }
+</style>
+
+<style>
 	.deseado-imagen {
-	width: 26%;
+		width: 26%;
 	}
 
 	@@media (max-width: 800px) {
-	.deseado-imagen {
-	display: none;
-	}
+		.deseado-imagen {
+			display: none;
+		}
 	}
 </style>
 
 <style>
 	.cargando {
-	width: 48px;
-	height: 48px;
-	border: 5px solid var(--colorTexto);
-	border-bottom-color: transparent;
-	border-radius: 50%;
-	display: inline-block;
-	box-sizing: border-box;
-	animation: rotation 1s linear infinite;
+		width: 48px;
+		height: 48px;
+		border: 5px solid var(--colorTexto);
+		border-bottom-color: transparent;
+		border-radius: 50%;
+		display: inline-block;
+		box-sizing: border-box;
+		animation: rotation 1s linear infinite;
 	}
 
 	@@keyframes rotation {
@@ -217,7 +226,7 @@
 
 				@if (pestañaMostrar == 0 || pestañaMostrar == 1)
 				{
-					<div style="background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 20px; width: 100%; margin: 15px 0px 25px 0px; display: flex; flex-direction: column; gap: 30px;">
+					<div class="caja-diseño" style="padding: 20px; width: 100%; margin: 15px 0px 25px 0px; display: flex; flex-direction: column; gap: 30px;">
 						<div style="display: flex; align-items: center; gap: 20px;">
 							<div style="max-width: 20px;">
 								<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
@@ -327,7 +336,7 @@
 
 								@if (enseñarDescuentoMinimo == true)
 								{
-									<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 20px;">
+									<div style="background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); border-radius: 5px; padding: 20px;">
 										<div style="display: flex; align-items: center; gap: 30px;">
 											<input type="range" min="1" max="91" value="@minimoDescuento" step="5" @onchange="@(e => CambiarMinimoDescuento(e))" class="deslizador">
 
@@ -338,7 +347,7 @@
 
 								@if (enseñarPrecioMaximo == true)
 								{
-									<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 20px;">
+									<div style="background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); border-radius: 5px; padding: 20px;">
 										<div style="display: flex; align-items: center; gap: 30px;">
 											<input type="range" min="5" max="90" value="@maximoPrecio" step="1" @onchange="@(e => CambiarMaximoPrecio(e))" class="deslizador">
 
@@ -349,7 +358,7 @@
 
 								@if (enseñarCompartir == true)
 								{
-									<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 20px;">
+									<div style="background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); border-radius: 5px; padding: 20px;">
 										<div style="display: flex; align-items: center; gap: 30px;">
 											<div class="checkbox-caja">
 												<input type="checkbox" class="checkbox-interior" checked="@estadoCompartir" @onchange="CompartirDeseados">
@@ -382,7 +391,7 @@
 
 								@if (enseñarExportar == true)
 								{
-									<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 20px;">
+									<div style="background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); border-radius: 5px; padding: 20px;">
 										<div style="font-size: 15px;">
 											<div style="margin-bottom: 15px;">
 												@Herramientas.Idiomas.BuscarTexto(idioma, "String26", "Wishlist")
