--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -633,7 +633,7 @@
                         {
                             if (categoria == "54")
                             {
-                                <div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 20px 30px; display: flex; flex-direction: row; align-items: center; gap: 30px;">
+                                <div class="caja-diseño" style="padding: 20px 30px; display: flex; flex-direction: row; align-items: center; gap: 30px;">
                                     <div style="max-width: 26px;">
                                         <svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
                                             <path d="M576 64L64 64C28.7 64 0 92.7 0 128L0 384c0 35.3 28.7 64 64 64l120.4 0c24.2 0 46.4-13.7 57.2-35.4l32-64c8.8-17.5 26.7-28.6 46.3-28.6s37.5 11.1 46.3 28.6l32 64c10.8 21.7 33 35.4 57.2 35.4L576 448c35.3 0 64-28.7 64-64l0-256c0-35.3-28.7-64-64-64zM96 240a64 64 0 1 1 128 0A64 64 0 1 1 96 240zm384-64a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/>
@@ -1414,6 +1414,18 @@
                                                                     }
                                                                 }
                                                             }
+
+                                                            @if (juego.Caracteristicas != null)
+                                                            {
+                                                                if (drm.Id == JuegoDRM.Steam && juego.Caracteristicas.RealidadVirtual != null)
+                                                                {
+                                                                    <button @onclick="(e => RVEnseñar(e, drm.Id))" class="boton-expandir" style="color: var(--colorTexto); text-decoration: none; border: 0px; height: 34px; padding: 0px 12px;">
+                                                                        <div style="font-size: 14px;">
+                                                                            @Idiomas.BuscarTexto(idioma, "String98", "Game")
+                                                                        </div>
+                                                                    </button>
+                                                                }
+                                                            }
                                                         </div>
                                                     }
                                                 }
@@ -2045,7 +2057,7 @@
                         </div>
                     }
 
-                    @if (juego.Caracteristicas.Desarrolladores2 != null || juego.Caracteristicas.Editores2 != null || juego.Generos != null)
+                    @if (juego.Caracteristicas.Desarrolladores2 != null || juego.Caracteristicas.Editores2 != null)
                     {
                         <div class="caja-diseño" style="padding: 40px; display: flex; flex-direction: column; gap: 15px;">
                             @if (juego.Caracteristicas.Desarrolladores2 != null)
@@ -2119,44 +2131,6 @@
                                     </div>
                                 }
                             }           
-
-                            @if (juego.Generos != null)
-                            {
-                                if (juego.Generos.Count > 0)
-                                {
-                                    <div>
-                                        <div>@Idiomas.BuscarTexto(idioma, "String44", "Game"):</div>
-
-                                        <div>
-                                            @{
-                                                int i = 0;
-
-                                                foreach (var genero in juego.Generos)
-                                                {
-                                                    if (i > 0)
-                                                    {
-                                                        <label style="margin-right: 5px;">,</label>
-                                                    }
-
-                                                    string cadenaGenero = Idiomas.BuscarTexto(idioma, genero, "Genres");
-
-                                                    if (string.IsNullOrEmpty(cadenaGenero) == false)
-                                                    {
-                                                        string idGenero = "g" + genero;
-                                                        <a href="/filter/@idGenero/">@cadenaGenero</a>
-                                                    }
-                                                    else
-                                                    {
-                                                        global::BaseDatos.Errores.Insertar.Mensaje("Género no encontrado", genero + " - " + juego.Nombre, "https://store.steampowered.com/api/appdetails/?appids=" + juego.IdSteam.ToString() + "&l=english");
-                                                    }
-
-                                                    i += 1;
-                                                }
-                                            }
-                                        </div>
-                                    </div>
-                                }
-                            }
                         </div>
                     }
 
@@ -2358,6 +2332,14 @@
                                             <a href="@enlace" target="_blank" class="boton-pequeño" title="TikTok" style="width: fit-content; padding: 10px;">
                                                 <div style="width: 30px; height: 30px; padding: 2px;">
                                                    <svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M448 209.9a210.1 210.1 0 0 1 -122.8-39.3V349.4A162.6 162.6 0 1 1 185 188.3V278.2a74.6 74.6 0 1 0 52.2 71.2V0l88 0a121.2 121.2 0 0 0 1.9 22.2h0A122.2 122.2 0 0 0 381 102.4a121.4 121.4 0 0 0 67 20.1z"/></svg>
+                                                </div>
+                                            </a>
+                                        }
+                                        else if (enlace.Contains("https://www.threads.net/") == true)
+                                        {
+                                            <a href="@enlace" target="_blank" class="boton-pequeño" title="Threads" style="width: fit-content; padding: 10px;">
+                                                <div style="width: 30px; height: 30px; padding: 2px;">
+                                                   <svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M331.5 235.7c2.2 .9 4.2 1.9 6.3 2.8c29.2 14.1 50.6 35.2 61.8 61.4c15.7 36.5 17.2 95.8-30.3 143.2c-36.2 36.2-80.3 52.5-142.6 53h-.3c-70.2-.5-124.1-24.1-160.4-70.2c-32.3-41-48.9-98.1-49.5-169.6V256v-.2C17 184.3 33.6 127.2 65.9 86.2C102.2 40.1 156.2 16.5 226.4 16h.3c70.3 .5 124.9 24 162.3 69.9c18.4 22.7 32 50 40.6 81.7l-40.4 10.8c-7.1-25.8-17.8-47.8-32.2-65.4c-29.2-35.8-73-54.2-130.5-54.6c-57 .5-100.1 18.8-128.2 54.4C72.1 146.1 58.5 194.3 58 256c.5 61.7 14.1 109.9 40.3 143.3c28 35.6 71.2 53.9 128.2 54.4c51.4-.4 85.4-12.6 113.7-40.9c32.3-32.2 31.7-71.8 21.4-95.9c-6.1-14.2-17.1-26-31.9-34.9c-3.7 26.9-11.8 48.3-24.7 64.8c-17.1 21.8-41.4 33.6-72.7 35.3c-23.6 1.3-46.3-4.4-63.9-16c-20.8-13.8-33-34.8-34.3-59.3c-2.5-48.3 35.7-83 95.2-86.4c21.1-1.2 40.9-.3 59.2 2.8c-2.4-14.8-7.3-26.6-14.6-35.2c-10-11.7-25.6-17.7-46.2-17.8H227c-16.6 0-39 4.6-53.3 26.3l-34.4-23.6c19.2-29.1 50.3-45.1 87.8-45.1h.8c62.6 .4 99.9 39.5 103.7 107.7l-.2 .2zm-156 68.8c1.3 25.1 28.4 36.8 54.6 35.3c25.6-1.4 54.6-11.4 59.5-73.2c-13.2-2.9-27.8-4.4-43.4-4.4c-4.8 0-9.6 .1-14.4 .4c-42.9 2.4-57.2 23.2-56.2 41.8l-.1 .1z"/></svg>
                                                 </div>
                                             </a>
                                         }
@@ -3254,6 +3236,115 @@
     </div>
 }
 
+@if (juego != null && enseñarRV == true)
+{
+    if (juego.Caracteristicas != null)
+    {
+        if (juego.Caracteristicas.RealidadVirtual != null)
+        {
+            <div class="opciones-panel">
+                <div class="caja-diseño" style="padding: 40px; display: flex; align-items: start; gap: 40px;">
+                    <button @onclick="@(e => RVCerrar(e))" class="boton-pequeño" style="width: fit-content; padding: 10px 15px;">
+                        <div style="max-width: 24px; max-height: 24px;">
+                            <svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                <path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z" />
+                            </svg>
+                        </div>
+                    </button>
+
+                    <div style="width: 600px;">
+                        <div>
+                            @juego.Nombre (@rvDrmSeleccionadoTexto)
+                        </div>
+
+                        <hr/>
+
+                        <div style="display: flex; flex-direction: column; gap: 15px;">
+                            <div style="display: flex; align-items: center; gap: 15px;">
+                                @if (juego.Caracteristicas.RealidadVirtual.Vrhmd == true)
+                                {
+                                    <div style="min-width: 14px; max-width: 16px;"><svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"></path></svg></div>
+                                }
+                                else
+                                {
+                                    <div style="min-width: 14px; max-width: 16px;"><svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"></path></svg></div>                            
+                                }
+
+                                VR Head Mounted Display
+                            </div>
+
+                            <div style="display: flex; align-items: center; gap: 15px;">
+                                @if (juego.Caracteristicas.RealidadVirtual.VrhmdOnly == true)
+                                {
+                                    <div style="min-width: 14px; max-width: 16px;"><svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"></path></svg></div>
+                                }
+                                else
+                                {
+                                    <div style="min-width: 14px; max-width: 16px;"><svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"></path></svg></div>                            
+                                }
+
+                                VR Head Mounted Display Only
+                            </div>
+
+                            <div style="display: flex; align-items: center; gap: 15px;">
+                                @if (juego.Caracteristicas.RealidadVirtual.HtcVive == true)
+                                {
+                                    <div style="min-width: 14px; max-width: 16px;"><svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"></path></svg></div>
+                                }
+                                else
+                                {
+                                    <div style="min-width: 14px; max-width: 16px;"><svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"></path></svg></div>                            
+                                }
+
+                                HTC Vive
+                            </div>
+
+                            <div style="display: flex; align-items: center; gap: 15px;">
+                                @if (juego.Caracteristicas.RealidadVirtual.OculusRift == true)
+                                {
+                                    <div style="min-width: 14px; max-width: 16px;"><svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"></path></svg></div>
+                                }
+                                else
+                                {
+                                    <div style="min-width: 14px; max-width: 16px;"><svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"></path></svg></div>                            
+                                }
+
+                                Oculus Rift
+                            </div>
+
+                            <div style="display: flex; align-items: center; gap: 15px;">
+                                @if (juego.Caracteristicas.RealidadVirtual.WindowsMr == true)
+                                {
+                                    <div style="min-width: 14px; max-width: 16px;"><svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"></path></svg></div>
+                                }
+                                else
+                                {
+                                    <div style="min-width: 14px; max-width: 16px;"><svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"></path></svg></div>                            
+                                }
+
+                                Windows Mixed Reality
+                            </div>
+
+                            <div style="display: flex; align-items: center; gap: 15px;">
+                                @if (juego.Caracteristicas.RealidadVirtual.ValveIndex == true)
+                                {
+                                    <div style="min-width: 14px; max-width: 16px;"><svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"></path></svg></div>
+                                }
+                                else
+                                {
+                                    <div style="min-width: 14px; max-width: 16px;"><svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"></path></svg></div>                            
+                                }
+
+                                Valve Index
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+    }
+}
+
 @code {
 
     #nullable disable
@@ -3653,7 +3744,7 @@
                         actualizarDatosAPI = true;
                     }
 
-                    if (juego.Categorias == null && juego.Generos == null)
+                    if (juego.Categorias == null)
                     {
                         actualizarDatosAPI = true;
 
@@ -3661,6 +3752,14 @@
                         {
                             actualizarDatosAPI = false;
                         }
+                    }
+
+                    if (juego.Media != null)
+                    {
+                        if (juego.Media.Capturas2 == null)
+                        {
+                            actualizarDatosAPI = true;
+                        }                        
                     }
 
                     if (actualizarDatosAPI == true)
@@ -5609,6 +5708,27 @@
     private void IdiomasCerrar(MouseEventArgs e)
     {
         enseñarIdiomas = false;
+    }
+
+    #endregion
+
+    #region Ventana Realidad Virtual
+
+    private bool enseñarRV = false;
+    private JuegoDRM rvDrmSeleccionado = JuegoDRM.NoEspecificado;
+    private string rvDrmSeleccionadoTexto = string.Empty;
+
+    private void RVEnseñar(MouseEventArgs e, JuegoDRM drm)
+    {
+        enseñarRV = true;
+
+        rvDrmSeleccionado = drm;
+        rvDrmSeleccionadoTexto = JuegoDRM2.DevolverDRM(drm);
+    }
+
+    private void RVCerrar(MouseEventArgs e)
+    {
+        enseñarRV = false;
     }
 
     #endregion
